<resources>
    <string name="app_name">DashTracker</string>
    <string name="location_service_desc">DashTracker mileage tracking active</string>
    <string name="frag_title_daily_list">Daily</string>
    <string name="frag_title_weekly_list">Weekly</string>
    <string name="frag_title_yearly_list">Yearly</string>
    <string name="frag_title_expenses">Expenses</string>
    <string name="frag_title_income">Income</string>
    <string name="frag_title_trends">Trends</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_start_time">Start Time</string>
    <string name="lbl_start_mileage">Start Mileage</string>
    <string name="lbl_end_time">End Time</string>
    <string name="lbl_ends_on_following_day">Ends the next day</string>
    <string name="lbl_end_mileage">End Mileage</string>
    <string name="lbl_total_mileage">Total Mileage</string>
    <string name="lbl_pay">Regular Pay</string>
    <string name="lbl_cash_tips">Cash Tips</string>
    <string name="lbl_num_deliveries">Num. Deliveries</string>
    <string name="lbl_hourly">Hourly</string>
    <string name="lbl_this_week">This Week</string>
    <string name="lbl_other_pay">Other Pay</string>
    <string name="lbl_last_week">Last Week</string>
    <string name="lbl_amount">Amount</string>
    <string name="lbl_base_pay_adjust">Base Pay\nAdjust</string>
    <string name="lbl_total_earned">Earnings</string>
    <string name="lbl_adjust">Base Pay Adjustment</string>
    <string name="lbl_shifts">shifts</string>
    <string name="lbl_reported_income">Reported Income</string>
    <string name="lbl_purpose">Purpose</string>
    <string name="lbl_gallons">Gallons</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_gas">Gas</string>
    <string name="lbl_other">Other</string>
    <string name="list_item_label_net">Net</string>
    <string name="lbl_show">Show</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_cost_per_mile">Cost per mile</string>
    <string name="lbl_set_cpm_method">Estimate cost per mile using:</string>
    <string name="lbl_cpm">CPM</string>
    <string name="lbl_none">None</string>
    <string name="lbl_start_mileage_adjusted">Keep Start Mileage</string>
    <string name="lbl_end_mileage_adjusted">Keep End Mileage</string>
    <string name="content_desc_delete">Delete</string>
    <string name="content_desc_reset">Reset</string>
    <string name="content_desc_save">Save</string>
    <string name="content_desc_start">Start</string>
    <string name="content_desc_fab_menu">Open menu</string>
    <string name="content_desc_incomplete_entry">Incomplete entry</string>
    <string name="content_desc_fab_menu_closed">Open add item menu</string>
    <string name="content_desc_edit_button">Edit this entry</string>
    <string name="content_desc_remove">Remove this entry</string>
    <string name="content_desc_drag_handle">Drag handle for bottom sheet</string>
    <string name="content_desc_recurring_expense">Recurring expense</string>
    <string name="content_desc_edit_purpose_list">Edit list</string>
    <string name="content_desc_add_purpose">Add purpose</string>
    <string name="content_desc_expand_item_list_options_button">Toggle item list options menu</string>
    <string name="label_action_licenses">Licenses</string>
    <string name="label_action_export">Export</string>
    <string name="label_action_import">Import</string>
    <string name="dialog_title_export">Export</string>
    <string name="dialog_title_import">Import</string>
    <string name="dialog_title_weekly">Weekly</string>
    <string name="dialog_text_import">Please locate the ZIP file you would like to import. The imported data will overwrite any existing data.</string>
    <string name="dialog_notes_import"><b>If you have modified the CSV files:</b>\n\n<ul>
        <li>The CSV files must be put into a zip file in order to import.\n\n</li>
        <li>Specific values are expected in the header row. If you\'ve changed any of the header row values, you must change them back. You can create a new export to find the appropriate values.</li></ul>
    </string>
    <string name="dialog_text_export">This will create a ZIP file containing a CSV-formatted backup of your data.</string>
    <string name="dialog_notes_export"><ul>
        <li>Choose a secure location to save the ZIP file and any extracted files, as anyone with access to them will be able to open them.\n\n</li>
        <li>Creating a manual backup is purely optional, because Android already periodically backs up your app data, if you have it enabled in <b>Settings > System > Backup</b>. Any time you reinstall the app, your data will be automatically restored from the last available backup.</li></ul>
    </string>
    <string name="currency_fmt">$%.2f</string>
    <string name="cpm_unit">$%.2f</string>
    <string name="irs_cpm_unit">$%.3f</string>
    <string name="gas_price_edit">%.3f</string>
    <string name="gas_price_display">$%.3f</string>
    <string name="blank_currency">$  -  </string>
    <string name="odometer_range" formatted="true">%1$.0f - %2$.0f</string>
    <string name="odometer_range_int" formatted="true">%1$d - %2$d</string>
    <string name="time_range" formatted="true">%1$s - %2$s</string>
    <string name="format_hours">%.2fh</string>
    <string name="float_fmt">%.2f</string>
    <string name="blank_float">  -  </string>
    <string name="week_number">Week %d</string>
    <string name="date_range">%1$s - %2$s</string>
    <string name="mileage_fmt">%.1f</string>
    <string name="odometer_fmt">%.0f</string>
    <string name="units_pay_rate">$/hr</string>
    <string name="units_avg_delivery">$/del</string>
    <string name="units_del_per_hr">del/hr</string>
    <string name="ante_meridiem">AM</string>
    <string name="post_meridiem">PM</string>
    <string name="header_hours">Hours</string>
    <string name="header_mileage">Miles</string>
    <string name="header_num_deliveries">Deliveries</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="dont_ask">Don\'t ask again</string>
    <string name="confirm_delete">The information you\'ve entered will not be recoverable</string>
    <string name="confirm_reset">Recent changes may be lost</string>
    <string name="csv_generation_failed">CSV generation failed</string>
    <string name="confirm_dialog">Confirm %s</string>
    <string name="confirm_save_entry_incomplete">This entry is incomplete. Would you like to save it?</string>
    <string name="confirm_import_show_modified_info_lbl">Notes</string>
    <string name="confirm_export_notes_lbl">Notes</string>
    <string name="unzip_error">Unable to unzip file</string>
    <string name="message_new_expense">What is the new expense type?</string>
    <string name="message_edit_expense">What is the new name for this expense type?</string>
    <string name="dialog_title_edit_expense_type">Edit Expense Type Name</string>
    <string name="dialog_title_new_expense_type">New Expense type</string>
    <string name="bottom_sheet_income_lbl_period">Period</string>
    <string name="expense_purpose_gas">Gas</string>
    <string name="expense_purpose_all">All</string>
    <string name="expense_purpose_standard">IRS Rate</string>
    <string name="dummy_text_label">Lorem ipso</string>
    <string name="lbl_net_expenses">Est. expense</string>
    <string name="lbl_hourly_gross_net">Hourly gross/net</string>
    <string name="lbl_hourly_by_day_of_week">Stats by Day of Week</string>
    <string name="lbl_num_days">Num Days</string>
    <string name="lbl_num_weeks">Num Weeks</string>
    <string name="chart_title_avg_per_delivery">Average per delivery</string>
    <string name="chart_title_avg_dels_per_hour">Average deliveries per hour</string>
    <string name="chart_title_avg_per_hour">Average per hour</string>
    <string name="lbl_tracked_mileage">Tracked Mileage</string>
    <string-array name="list_whats_new_mileage_tracking">
        <item>Spend less time entering mileage information</item>
        <item>Get a real-time estimate of your expenses while you\'re dashing</item>
        <item>Keep control of your data</item>
    </string-array>
    <string name="dialog_location_permission">DashTracker uses your location data to calculate
        your mileage, and uses your physical activity data to determine when you are driving.
        \n\nDashTracker will only access your location and physical activity while mileage tracking
        is active.
        \n\nYour data is only stored on your phone, so we do not sell, share, or have access to it.
    </string>
    <string name="dialog_bg_location_text">DashTracker will continue to access your location
        while it is running in the background. Without this permission, DashTracker cannot
        provide accurate mileage tracking.
        \n\nDashTracker will only access your location and physical activity while mileage tracking
        is active.
        \n\nYour data is only stored on your phone, so we do not sell, share, or have access to it.
    </string>
    <string name="dialog_notification_permission">You can have DashTracker show a notification when
        mileage tracking is active while the app is running in the background.
    </string>
    <string name="dialog_battery_permission">Android\'s battery optimizer may interfere with
        DashTracker\'s mileage tracking, especially if the battery is low. In order for mileage
        tracking to work as expected, it is recommended that you allow DashTracker unrestricted
        background battery use.
    </string>
    <string name="reenable_battery_permission_1">To reenable battery optimization, press\ </string>
    <string name="reenable_battery_permission_2_ital">OK</string>
    <string name="reenable_battery_permission_3">, which will open Android\'s DashTracker settings. Select\ </string>
    <string name="reenable_battery_permission_4_ital">Battery</string>
    <string name="reenable_battery_permission_5">\ then\ </string>
    <string name="reenable_battery_permission_6_ital">Optimized</string>
    <string name="reenable_battery_permission_7">, then return to DashTracker.</string>
    <string name="action_menu_new_item">New Item</string>
    <string name="action_add_dash">Add Dash</string>
    <string name="action_add_weekly">Add Weekly Adjustment</string>
    <string name="action_add_expense">Add Expense</string>
    <string name="cont_desc_pause_mileage_tracking">Pause Mileage Tracking</string>
    <string name="title_activity_settings">Settings</string>
    <string name="prefs_category_income">Income</string>
    <string name="prefs_category_auto_mileage">Automatic Mileage Tracking</string>
    <string name="prefs_category_security">Security</string>
    <string name="prefs_category_appearance">Appearance</string>
    <string name="prefs_enable_location">prefs_enable_location</string>
    <string name="prefs_enable_notification">prefs_enable_notification</string>
    <string name="prefs_enable_bg_battery">prefs_enable_bg_battery</string>
    <string name="prefs_show_base_pay_adjusts">prefs_show_base_pay_adjusts</string>
    <string name="prefs_authentication_enabled">prefs_authentication_enabled</string>
    <string name="pref_title_show_weekly_adjustment_field">Show weekly adjustment field</string>
    <string name="pref_title_require_authentication">Require authentication to open</string>
    <string name="prefs_ui_mode">prefs_ui_mode</string>
    <string name="pref_title_light_dark_theme">Light/Dark theme</string>
    <string name="pref_theme_option_use_device_theme">Use device theme</string>
    <string name="title_action_contact">Contact us</string>
</resources>