<!--
  ~ Copyright 2022 Wesley T. Benica
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/prefs_category_income">

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/prefs_show_base_pay_adjusts"
            app:title="@string/pref_title_show_weekly_adjustment_field"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/prefs_category_auto_mileage">

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/prefs_enable_location"
            app:title="Enable mileage tracking" />

        <SwitchPreference
            app:defaultValue="false"
            app:dependency="@string/prefs_enable_location"
            app:key="@string/prefs_enable_notification"
            app:title="Show notification when active" />

        <SwitchPreference
            app:defaultValue="false"
            app:dependency="@string/prefs_enable_location"
            app:key="@string/prefs_enable_bg_battery"
            app:title="Allow background battery usage" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/prefs_category_security">

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/prefs_authentication_enabled"
            app:title="@string/pref_title_require_authentication" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/prefs_category_appearance">

        <ListPreference
            android:title="@string/pref_title_light_dark_theme"
            app:defaultValue="@string/pref_theme_option_use_device_theme"
            app:entries="@array/theme_options"
            app:entryValues="@array/theme_options"
            app:key="@string/prefs_ui_mode"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>