<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2022 Wesley T. Benica
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_item"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/action_menu_new_item"
        app:iconTint="?attr/colorOnPrimaryVariant"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_new_entry"
                android:title="@string/action_add_dash"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_new_weekly"
                android:title="@string/action_add_weekly"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_new_expense"
                android:title="@string/action_add_expense"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
    <item
        android:id="@+id/action_export_to_csv"
        android:icon="@drawable/ic_export_outline"
        android:title="@string/label_action_export"
        app:iconTint="?attr/colorOverflowMenuItemIcon"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_from_csv"
        android:icon="@drawable/ic_import_outline"
        android:title="@string/label_action_import"
        app:iconTint="?attr/colorOverflowMenuItemIcon"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_outline"
        android:title="@string/title_activity_settings"
        app:iconTint="?attr/colorOverflowMenuItemIcon"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact"
        android:icon="@drawable/ic_mail_outline"
        android:title="@string/title_action_contact"
        app:iconTint="?attr/colorOverflowMenuItemIcon"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_licenses"
        android:icon="@drawable/ic_licenses_outline"
        android:title="@string/label_action_licenses"
        app:iconTint="?attr/colorOverflowMenuItemIcon"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scan_receipt"
        android:icon="@drawable/ic_arrow_expand"
        android:title="Scan Receipt"
        app:iconTint="?attr/colorOverflowMenuItemIcon"
        app:showAsAction="never" />
</menu>