<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2022 Wesley T. Benica
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/list_item_weekly">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            style="@style/DetailsTableTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?attr/listItemThinBorder">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/PayTableHeaderStyle"
                    android:text="@string/lbl_pay" />

                <TextView
                    android:id="@+id/label_base_pay_adjust"
                    style="@style/PayTableHeaderStyle"
                    android:text="@string/lbl_adjust" />

                <TextView
                    style="@style/PayTableHeaderStyle"
                    android:text="@string/lbl_cash_tips" />

                <TextView
                    style="@style/PayTableHeaderStyle"
                    android:text="@string/lbl_other_pay" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/list_item_regular_pay"
                    style="@style/PayTableValueStyle"
                    tools:text="$73.25" />

                <TextView
                    android:id="@+id/list_item_weekly_adjust"
                    style="@style/PayTableValueStyle"
                    tools:text="$13.58" />

                <TextView
                    android:id="@+id/list_item_cash_tips"
                    style="@style/PayTableValueStyle"
                    tools:text="$8.00" />

                <TextView
                    android:id="@+id/list_item_other_pay"
                    style="@style/PayTableValueStyle"
                    tools:text="-" />
            </TableRow>
        </TableLayout>

        <GridLayout
            style="@style/DetailsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3">

            <!-- Row 0 -->
            <TextView
                style="@style/HeaderStyle"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/header_hours" />

            <TextView
                android:id="@+id/list_item_weekly_hours"
                style="@style/ValueStyle"
                android:layout_row="0"
                android:layout_column="2"
                tools:text="2.93h" />

            <!-- Row 1 -->
            <TextView
                style="@style/HeaderStyle"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/header_mileage" />

            <TextView
                android:id="@+id/list_item_weekly_miles"
                style="@style/ValueStyle"
                android:layout_row="1"
                android:layout_column="2"
                tools:text="380" />

            <!-- Row 2 -->
            <TextView
                android:id="@+id/list_item_weekly_cpm_header"
                style="@style/HeaderStyle"
                android:layout_height="0dp"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/lbl_cost_per_mile"
                android:visibility="invisible"
                tools:layout_height="wrap_content"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/list_item_weekly_cpm_deduction_type"
                style="@style/SecondaryValueStyle"
                android:layout_height="0dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:visibility="invisible"
                tools:layout_height="wrap_content"
                tools:text="Gas Only"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/list_item_weekly_cpm"
                style="@style/ValueStyle"
                android:layout_height="0dp"
                android:layout_row="2"
                android:layout_column="2"
                android:visibility="invisible"
                tools:layout_height="wrap_content"
                tools:text="$0.18"
                tools:visibility="visible" />

            <!-- Row 3 -->
            <TextView
                android:id="@+id/list_item_weekly_expenses_header"
                style="@style/HeaderStyle"
                android:layout_height="0dp"
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/lbl_net_expenses"
                android:visibility="invisible"
                tools:layout_height="wrap_content"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/list_item_weekly_expenses"
                style="@style/ValueStyle"
                android:layout_height="0dp"
                android:layout_row="3"
                android:layout_column="2"
                android:visibility="invisible"
                tools:layout_height="wrap_content"
                tools:text="$56.18"
                tools:visibility="visible" />

            <!-- Row 4 -->
            <TextView
                style="@style/HeaderStyle"
                android:layout_column="0"
                android:text="@string/units_pay_rate" />

            <TextView
                android:id="@+id/list_item_weekly_hourly"
                style="@style/ValueStyle"
                android:layout_column="2"
                tools:text="$22.41/hr" />

            <TextView
                style="@style/HeaderStyle"
                android:text="@string/units_avg_delivery" />

            <TextView
                android:id="@+id/list_item_weekly_avg_del"
                style="@style/ValueStyle"
                android:layout_column="2"
                tools:text="$9.25/del" />

            <TextView
                style="@style/HeaderStyle"
                android:text="@string/units_del_per_hr" />

            <TextView
                android:id="@+id/list_item_weekly_hourly_dels"
                style="@style/ValueStyle"
                android:layout_column="2"
                tools:text="2.38" />
        </GridLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>