<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item_details_card"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/list_item_yearly">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp">

            <TableLayout
                style="@style/PayTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/RowHeader.PayTable"
                        android:text="@string/lbl_reported_income" />

                    <TextView
                        style="@style/RowHeader.PayTable"
                        android:text="@string/lbl_cash_tips" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/list_item_reported_income"
                        style="@style/RowValue.PayTable"
                        tools:text="$2073.25" />

                    <TextView
                        android:id="@+id/list_item_cash_tips"
                        style="@style/RowValue.PayTable"
                        tools:text="$8.00" />
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp">

            <TableRow style="@style/DetailsRow">

                <TextView
                    style="@style/RowHeader"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:text="@string/header_mileage" />

                <TextView
                    android:id="@+id/list_item_yearly_mileage"
                    style="@style/RowValue"
                    tools:text="3,201" />
            </TableRow>

            <TableRow style="@style/DetailsRow">

                <TextView
                    style="@style/RowHeader"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:text="@string/header_hours" />

                <TextView
                    android:id="@+id/list_item_yearly_hours"
                    style="@style/RowValue"
                    tools:text="2.93h" />
            </TableRow>

            <TableRow style="@style/DetailsRow">

                <TextView
                    style="@style/RowHeader"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:text="@string/units_pay_rate" />

                <TextView
                    android:id="@+id/list_item_yearly_hourly"
                    style="@style/RowValue"
                    tools:text="$22.41" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>